# git-version

./: Cargo.toml
git-version-macro/: Cargo.toml
git-version-macro/src/: lib.rs  utils.rs
src/: lib.rs
tests/: version.rs
