[package]
name = "comfy-git-version"
description = "A comfy fork of git-version: compile the git version (tag name, or hash otherwise) and dirty state into your program."
version = "0.4.0"
authors = [
	"Jakub Arnold <darthdeus@gmail.com>",
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
	"David Roundy <daveroundy@gmail.com>",
]
license = "BSD-2-Clause"
repository = "https://github.com/fusion-engineering/rust-git-version"
documentation = "https://docs.rs/git-version/"
keywords = ["git", "version", "build"]
categories = ["development-tools", "development-tools::build-utils"]
edition = "2018"
readme = "README.md"

[dependencies]
comfy-git-version-macro = { version = "=0.3.5", path = "comfy-git-version-macro" }

[workspace]
members = ["comfy-git-version-macro"]
